Refactor ValidationResult builder and equality